fix(components): Remove center alignment in FormField (#2057)
* fix(components): Remove center alignment in FormField

* re add transform so clearable is better aligned

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -72,7 +72,6 @@
   display: flex;
   height: var(--field--height);
   flex: 1;
-  align-items: center;
 }
 
 .textarea.safari .horizontalWrapper {
